--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
   </div>
 </footer>
 {% if site.javascript_enabled %}
-  <script src="/assets/main.js"></script>
+  <script src="{{ site.baseurl }}/assets/main.js"></script>
 {% endif %}
 </body>
 </html>
