--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
     <div class="tags-container">
       Posted under <span>
           {% for tag in page.tags %}
-            <a class="tags" href="/tags#{{ tag }}">{{ tag }}</a>
+            <a class="tags" href="{{ site.baseurl }}/tags#{{ tag }}">{{ tag }}</a>
           {% endfor %}
         </span>
       &nbsp;
@@ -39,10 +39,10 @@ layout: default
 
     <section class="pagination">
       {% if page.previous.url %}
-      <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+      <a class="prev" href="{{ site.baseurl }}{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
       {% endif %}
       {% if page.next.url %}
-      <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+      <a class="next" href="{{ site.baseurl }}{{page.next.url}}">{{page.next.title}} &raquo;</a>
       {% endif %}
     </section>
 
